Ultimo entrega fianl del proyecto

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <li class="nav-item"><a class="nav-link" href="pages/programa.html">Programas</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/eventos.html">Eventos</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/noticias.html">Noticias</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -135,7 +136,7 @@
 
                             <p class="fst-italic">Los valores que rigen nuestro accionar son:</p>
 
-                            <ul>
+                            <ul class="fst-italic">
                                 <li class="liSobreNosotros"><i class="bi bi-check2-all"></i> La práctica de la escucha:
                                     Detenernos a escuchar lo que dice el otro (niño/a, docente, familia)tanto mediante
                                     palabras como por sus acciones, gestos, dibujos u otras manifestaciones, porque
