--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -77,10 +77,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a href="">Dia del Niño</a></h5>
                                 <p class="fst-italic text-center">Lunes 21 de Agosto</p>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
-                                    ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">El Día del Niño es un día dedicado a los niños y niñas, en el que no sólo se trata de festejarlos, sino además de promover sus derechos y concienciar a las personas de la importancia de éstos.</p>
                             </div>
                         </div>
                     </div>
@@ -93,10 +90,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a href="">Dia del Folklore</a></h5>
                                 <p class="fst-italic text-center">Martes 22 de Agosto</p>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
-                                    ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">El 22 de agosto se celebra en Argentina y el mundo el día del folclore, término que remite a la música, a la cultura, a la identidad de los pueblos.</p>
                             </div>
                         </div>
                     </div>
@@ -107,12 +101,9 @@
                                 <img src="../img/diadelarbol.jpg" alt="Dia del Arbol">
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title"><a href="">Dia del Niño</a></h5>
+                                <h5 class="card-title"><a href="">Dia del Arbol</a></h5>
                                 <p class="fst-italic text-center">Martes 29 de Agosto</p>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
-                                    ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">El Día del Árbol se celebra para tomar conciencia de la importancia de los recursos forestales para el desarrollo de la humanidad y de su hábitat.</p>
                             </div>
                         </div>
                     </div>
@@ -120,15 +111,12 @@
                     <div class="col-md-6 d-flex align-items-stretch">
                         <div class="card">
                             <div class="card-img">
-                                <img src="../img/semanaLibros.png" alt="Semana del Libro">
+                                <img src="../img/semLibros.png" alt="Semana del Libro">
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title"><a href="">Semana del Libro</a></h5>
                                 <p class="fst-italic text-center">Lunes 28 de Agosto al Viernes 1 de Septiembre</p>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor
-                                    ut
-                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">Durante una semana, las librerías sacarán sus ejemplares a la calle, habrá donaciones a bibliotecas, charlas educativas, regalo de libros en  bares de la ciudad y un campamento literario. </p>
                             </div>
                         </div>
                     </div>
