--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -86,7 +86,7 @@
         <section id="seccionNoticias">
             <div class="noticiasTexto">
                 <h3 class="tituloNoticia">Deportes y juegos</h3>
-                <p class="txtNot">La educación física suele ser la materia favorita de los más pequeños de la casa. A continuación, veremos algunos juegos de educación física, que a los niños les encantarán.</p>
+                <p class="txtNot">El deporte y el juego sienta las bases para el desarrollo de conocimientos y competencias sociales y emocionales clave. A través del juego y del deporte, los niños aprenden a forjar vínculos con los demás, y a compartir, negociar y resolver conflictos, además de contribuir a su capacidad de autoafirmación. A continuación, veremos algunos juegos de educación física, que a los niños les encantarán.</p>
                 <button class="btnNot">Mas informacion</button>
             </div>
 
@@ -98,7 +98,10 @@
         <section id="seccionNoticias">
             <div class="noticiasTexto">
                 <h3 class="tituloNoticia">Ambientacion al jardin</h3>
-                <p class="txtNot">La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son difíciles. Es importante que los niños vayan al jardín, comparten con otros niños el aprendizaje.</p>
+                <p class="txtNot">La decisión de iniciar el jardín es de cada familia, algunas adaptaciones son difíciles. Es importante que los niños vayan al jardín y compartan con otros niños el aprendizaje. El periodo de adaptación del niño a la guarderia es aquel tramo de tiempo que dedicamos a vivir con nuestros niños todas las rupturas que supone su incorporación al centro educativo, comprendiendo lo que sienten y apoyándolos en la búsqueda de soluciones positivas a los problemas que se plantean.
+                    <br>
+                    A continuación, les mostraremos algunos consejos antes de empezar el jardin.
+                </p>
                 <button class="btnNot">Mas informacion</button>
             </div>
 
