Eliminacion imganes no usadas

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -111,7 +111,7 @@
                     <div class="col-md-6 d-flex align-items-stretch">
                         <div class="card">
                             <div class="card-img">
-                                <img src="../img/semanaLibros.png" alt="Semana del Libro">
+                                <img src="../img/semanaLibros.jpg" alt="Semana del Libro">
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title"><a href="">Semana del Libro</a></h5>
