--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -90,7 +90,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a href="">Dia del Folklore</a></h5>
                                 <p class="fst-italic text-center">Martes 22 de Agosto</p>
-                                <p class="card-text">El 22 de agosto se celebra en Argentina y el mundo el día del folclore, término que remite a la música, a la cultura, a la identidad de los pueblos.</p>
+                                <p class="card-text">El 22 de agosto se celebra en Argentina y el mundo el día del folklore, término que remite a la música, a la cultura, a la identidad de los pueblos.</p>
                             </div>
                         </div>
                     </div>
