Actualizacion para pre-entrega 3

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -101,7 +101,7 @@
                                 <img src="../img/diadelarbol.jpg" alt="Dia del Arbol">
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title"><a href="">Dia del Arbol</a></h5>
+                                <h5 class="card-title"><a href="">Dia del Árbol</a></h5>
                                 <p class="fst-italic text-center">Martes 29 de Agosto</p>
                                 <p class="card-text">El Día del Árbol se celebra para tomar conciencia de la importancia de los recursos forestales para el desarrollo de la humanidad y de su hábitat.</p>
                             </div>
